--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.3"
+    "@babel/core": "^7.24.5",
+    "@babel/parser": "^7.24.5",
+    "@tremor/react": "^3.17.2",
+    "@upstash/redis": "^1.31.1",
+    "date-fns": "^3.6.0",
+    "punycode": "^2.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/babel__core": "^7.20.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "next": "^14.2.3",
+    "postcss": "^8",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
