--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tremor/react": "^3.17.2",
     "@upstash/redis": "^1.31.1",
     "date-fns": "^3.6.0",
-    "punycode": "^2.3.1"
+    "punycode": "^2.3.1",
+    "react-daisyui": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -23,6 +24,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "next": "^14.2.3",
