--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/core": "^7.24.5",
     "@babel/parser": "^7.24.5",
+    "@floating-ui/react": "^0.26.16",
     "@tremor/react": "^3.17.2",
     "@upstash/redis": "^1.31.1",
     "date-fns": "^3.6.0",
